--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "rollup -c rollup.config.js"
   },
+  "main": "./build/index.js",
   "peerDependencies": {
     "@nestjs/common": "^7.6.13",
     "@nestjs/core": "^7.6.13",
